src/main/resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
