src/main/resources/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: green-energy-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: green-energy-tracker.user
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-management-service
                port:
                  number: 3000
